src/objects/BA_INT_DATA_POOL__c.object
<CustomObject>
    <description>custom object for batch integration purposes.
the object act as a single repository for the entire batch data set across all interfaces.
{Job_ID, Record_Type, Group_ID, Sort_Order, Data_in_CSV_format}</description>
    <fields>
        <fullName>Record_ID__c</fullName>
        <description>Stores the &apos;Salesforce ID&apos; of the record entry</description>
        <label>Record ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>export_data__c</fullName>
        <description>the comma separated values fetched fro SFDC per batch job</description>
        <label>export data</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>group_id__c</fullName>
        <description>the unique identifier for the record (eg account_id or invoice_id)</description>
        <label>group id</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>insert_time__c</fullName>
        <description>the start time for the batch job</description>
        <label>insertion time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>job_id__c</fullName>
        <description>job name for the scheduled batch job</description>
        <label>job_id</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>record_type__c</fullName>
        <description>the type of record
eg, invoice header/invoice detail1/invoice detail2</description>
        <label>record type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>run_for_date__c</fullName>
        <description>EOD date for which the batch job was run</description>
        <label>run for date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sort_order__c</fullName>
        <description>to specify the order of the records in the file</description>
        <displayFormat>{00000000}</displayFormat>
        <label>sort order</label>
        <type>AutoNumber</type>
    </fields>
    <label>BA_INT_DATA_POOL</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>BA_INT_DATA_POOL Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BA_INT_DATA_POOL</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>